style fixes on index
- not sure why i didnt have the usual 100 w/h setup, avoids the white background while the dom is built
- added overflow to prevent page scrollbar appearing when the folder header exceeds the fixed height

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -68,6 +68,9 @@
 
 html, body {
     margin: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
 body {
